Fixed copy alignment on search results page

--- a/client/src/pages/SearchResultsPage/SearchResultsPage.scss
+++ b/client/src/pages/SearchResultsPage/SearchResultsPage.scss
@@ -120,7 +120,6 @@
       font-size: 1.25rem;
       margin-bottom: 1rem;
       color: $primary-medium-blue;
-      text-align: center;
     }
   
     &__text--bottom,
@@ -131,17 +130,12 @@
 
     &__text--top {
       margin-top: 1rem;
-      text-align: center;
+      margin-bottom: .25rem;
     }
 
     &__text--bottom {
       margin-bottom: 2.25rem;
-      text-align: center;
     }
-
-    &__text--top {
-        margin-bottom: 1rem;
-      }
   
     &__login-link,
     &__register-link {
